--- a/ClientApp/src/app/contact/contact.component.html
+++ b/ClientApp/src/app/contact/contact.component.html
@@ -1,5 +1,13 @@
+<div class="contactCardContainer" ng-style="{'background-image': 'url(' + customersupport.png + ')'}">
+    <div class="parallax"></div>
+    <div class="cardText">
+        <h1> Contact Us</h1>
+            <p> We're here to provide you with any additional information you may need, answer any questions, and make 
+                this process as smooth as possible for you.
+            </p>
+    </div>
+</div>
 
-
-<h1> Contact Us<h1>
-<p>email: example@gmail.com  </p>
-<p>phone: (888)-888-8888 </p>
+<div class="contactCardContainer"> 
+    <h1> Reason for Inquiry </h1>
+</div>
