--- a/ClientApp/src/app/contact/contact.component.html
+++ b/ClientApp/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
-<div class="contactCardContainer" ng-style="{'background-image': 'url(' + customersupport.png + ')'}">
+<div class="contactCardContainer" >
     <div class="parallax"></div>
-    <div class="cardText">
+    <div class="centered">
         <h1> Contact Us</h1>
             <p> We're here to provide you with any additional information you may need, answer any questions, and make 
                 this process as smooth as possible for you.
@@ -8,6 +8,31 @@
     </div>
 </div>
 
-<div class="contactCardContainer"> 
-    <h1> Reason for Inquiry </h1>
+<div class="helpContainer">
+    <div class="centeredText">
+        <h1> Reason for Inquiry </h1>
+        <p> What sort of help are you looking for?
+        </p>
+    </div>
+    <div class = "cards">
+        <section class="card">
+              <h2> Forms </h2>
+             
+        </section>
+        <section class="card">      
+            <h2> Payment  </h2>
+        </section>
+        <section class="card">
+            <h2> Lawyers</h2>
+        </section>
+    </div>
 </div>
+<div class="infoContainer">
+        <h1> Information </h1>
+            <p> askdhaskjdh askjdh askdjhas dkjah kjasdh kjasdh a
+                asdkj hasdjhas dkjha dkjasdh kasjdh askjdhas 
+                asdkjasdh kajsdh askjdh ajkdha kjdhas a
+                daskdjhask dhas djha jash kjasdh kajdh 
+            </p>
+</div>
+    
