--- a/ClientApp/src/app/contact/contact.component.css
+++ b/ClientApp/src/app/contact/contact.component.css
@@ -4,51 +4,122 @@
 body, html {
     height: 100%;
 }
+h2 {
+    font-family: Helvetica, sans-serif;
+    padding: 1%;
+    margin: 1%;
+}
+/* Contact Us div */ 
 .contactCardContainer {
-    margin: 4em;
     text-align: center;
-    width:800px;
     margin-left: auto;
     margin-right: auto;
 }
 .contactCardContainer p {
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-family: Helvetica, sans-serif;
+    margin: 1%;
 }
-.cardText {
-    margin: 2%;
-    padding: 2%;
+.contactCardContainer h1 {
+    color: black;
+    font-size: 3em;
+    font-family: Helvetica, sans-serif;
+    margin-bottom: 0;
 }
-
-.image {
-    background-image: url('/assets/customersupport.png');
-    filter: blur(1px);
-    -webkit-filter: blur(1px);
-    height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-.image-text {
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    color: white;
-    font-weight: bold;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 80%;
-    padding: 20px;
+/* What do you need help wtih section? */
+.helpContainer {
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    height: 450px;
 }
+.helpContainer p {
+    font-size: 20px;
+    font-family: Helvetica, sans-serif;
+    margin: 1%;
+}
+.helpContainer h1 {
+    color: black;
+    font-size: 3em;
+    font-family: Helvetica, sans-serif;
+    margin-bottom: 0;
+    margin-top: 5%;
+}
+/* Number, email, location section */
+.infoContainer {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    height: 600px;
+    background-color: #efefef;
+}
+.infoContainer p {
+    font-size: 20px;
+    font-family: Helvetica, sans-serif;
+    margin: 1%;
+}
+.infoContainer h1 {
+    color: black;
+    font-size: 3em;
+    font-family: Helvetica, sans-serif;
+    margin-bottom: 0;
+    margin-top: 5%;
+    padding-top: 5%;
+}
+/* Background image is fixed as you scroll */
 .parallax {
-    background-image: url('/assets/customersupport.png');
+    background-image: url('/assets/customersupport2.jpg');
     min-height: 500px;
+    width: 100%;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+/* Centers text */
+.centered {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.centeredText {
+   top: 50%;
+   left: 50%;
+}
+
+/* Flexbox */
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+}
+.card {
+    flex: 0 0 200px;
+    margin: 50px;
+    margin-top: 50px;
+    background: #f2f2f2;
+    border-radius: 7px;
+    padding: 0 0 50px 0;
+    min-height: 300px;
+}
+.card > ul {
+    list-style: none;
+    padding: 0;
+}
+.card button {
+    width: 50%;
+    height: 40px;
+    border: 0;
+    margin-left: 12px;
+    border-radius: 7px;
+}
+.card > header {
+    background: #808080;
+    height: 200px;
+    border-radius: 7px 7px 0  0;
+}
+.card h2 {
+    padding-top: 15px;
 }
