--- a/ClientApp/src/app/contact/contact.component.html
+++ b/ClientApp/src/app/contact/contact.component.html
@@ -1,10 +1,11 @@
-<div class="contactCardContainer" >
-    <div class="parallax"></div>
-    <div class="parallax-text">
+<div class="contactCardContainer">
+    <div class="parallax parent-vcenter">
+    <div class="child-vCenter">
         <h1> Contact Us</h1>
             <p> We're here to provide you with any additional information you may need, answer any questions, and make 
                 this process as smooth as possible for you.
             </p>
+        </div>
     </div>
 </div>
 
@@ -24,7 +25,7 @@
         <section class="card">      
             <h2>Payment</h2>
             <img src="/assets/money.png" alt="payment icon" width="60" height="60">
-              <p>Having trouble making a payment? Question on our refund policy? <br>Reach out to us here. </p>
+              <p>Having trouble making a payment? Questions on our refund policy? <br>Reach out to us here. </p>
             <button class="button">Payment help</button>
         </section>
         <section class="card">
