user service started

--- a/ClientApp/src/app/exampledash/exampledash.component.html
+++ b/ClientApp/src/app/exampledash/exampledash.component.html
@@ -6,7 +6,7 @@
 
 
 <li *ngFor = "let account of displayAccounts">
-<p>{{account.Father}}</p>
+<p>{{account.Father}}, {{account.Mother}}, {{account.Daughter}}, {{account.Son}}</p>
 </li>
 
 <div *ngFor="let single of singleAccount">
