Landing page CSS

--- a/ClientApp/src/app/landing-page/landing-page.component.html
+++ b/ClientApp/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,48 @@
 <br>
-<p>
-  landing-page works!
-</p>
+<div class="parallaxContainer">
+  <div class="parallax parent-vcenter">
+    <div class="child-vcenter">
+        <h1>Take the necessary steps to safeguard your children</h1>
+        <p>Find that extra peace of mind</p>
+    </div>
+  </div>
+</div>
+
+<div class="KSGcontainer">
+  <div class="KSG-text">
+    <h1> What is Kids Safeguard System? </h1>
+    <p> Planning for what happens after your death can bring up a lot of emotions that a 
+      lot of people just aren't ready to deal with. 
+      Families avoid doing their estate plan because it can be a hassle, it can be emotional, 
+      and it can be a cold reminder of your own mortality. But it doesn't need to be like that.</p>
+    <span> That is where we come in. </span>
+    <p>We're here to make this entire process as easy and painless for you as we can.
+      The Kids Safeguard System exists for that sole purpose, to cater to the needs of you and
+      your family. We're here to help you create the most affordable and 
+      appropriate estate plan designed specifically for your family, and hopefully, somewhere in the process, give you some
+      sliver of relief and comfort knowing that your family will be taken care of.</p>
+    </div>
+</div>
+
+<div class="formButtonContainer">
+  <div class="cards">
+    <div class="newFormCard">    
+    <h1> Start a new form </h1>
+      <button class="button"> Get started</button>
+    </div>
+    <div class="continueFormCard">
+      <h1> Continue existing</h1>
+      <button class="button"> Continue</button>
+  </div>
+  </div>
+</div>
+
+<div>
+  <h1> Test </h1>
+  <p> ASdaskdhkashd askjdh asjkdhask jdhasjk dhaskjdh askjdh askjhd skjhs</p>
+</div>
+
+<div>
+    <h1> Test </h1>
+    <p> ASdaskdhkashd askjdh asjkdhask jdhasjk dhaskjdh askjdh askjhd skjhs</p>
+  </div>
