Login and Register 2

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -10,7 +10,7 @@
 
       <div class = "custom">
       <a routerLink = "/about">About </a>
-      <a routerLink = "/user"> Register </a>
+      <a routerLink = "/user2"> Register </a>
       <a routerLink = "/dashboard">Dashboard</a>
       <!-- Application won't be a tab on final version-->
       <a routerLink = "/formpage">Forms </a>
