--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -47,3 +47,36 @@ z-index: 1;
   background-color: black;
   background: black;
 }
+
+/* Footer */
+.footer {
+  background-color: #068C9B;
+  height: 200px;
+}
+.footer-container {
+  display: flex;
+  padding-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+}
+.footer-container h3 {
+  padding-bottom: 4%;
+}
+.f1, .f2, .f3, .f4 {
+  flex: 1;
+  color: white;
+  padding: 0;
+  margin: 0;
+  font-family: Roboto-Thin, sans-serif;
+  font-weight: 300;
+}
+
+ul {
+  list-style-type: none;
+}
+li:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
