--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -27,4 +27,41 @@
     </h1>
   </div>
 </div>
+
 <router-outlet></router-outlet>
+
+<div class="footer">
+  <div class="footer-container">
+    <div class="f1">
+      <ul>
+        <h3> Details </h3>
+        <li> Home </li>
+        <li> Pricing</li>
+        <li> Buy</li>
+      </ul>
+    </div>
+    
+    <div class="f2">
+      <ul>
+        <h3> About </h3>
+        <li> About Us</li>
+        <li> Privacy Policy</li>
+        <li> Terms of Service</li>
+      </ul>
+    </div>
+    <div class="f3">
+      <ul>
+        <h3> Help</h3>
+        <li> Contact Us</li>
+        <li> Get started</li>
+      </ul>
+    </div>
+    <div class="f4">
+      <ul>
+        <h3> Connect</h3>
+        <li> Facebook</li>
+        <li> Twitter</li>
+      </ul>
+    </div>
+  </div>
+</div>
