--- a/ClientApp/src/app/landing-page/landing-page.component.html
+++ b/ClientApp/src/app/landing-page/landing-page.component.html
@@ -2,8 +2,8 @@
 <div class="parallaxContainer">
   <div class="parallax parent-vcenter">
     <div class="child-vcenter">
-        <h1>Take the necessary steps to safeguard your children</h1>
-        <p>Find that extra peace of mind</p>
+        <h1>Are you prepared for the worst?</h1>
+        <p>Find your extra peace of mind</p>
     </div>
   </div>
 </div>
@@ -11,16 +11,30 @@
 <div class="KSGcontainer">
   <div class="KSG-text">
     <h1> What is Kids Safeguard System? </h1>
-    <p> Planning for what happens after your death can bring up a lot of emotions that a 
-      lot of people just aren't ready to deal with. 
-      Families avoid doing their estate plan because it can be a hassle, it can be emotional, 
-      and it can be a cold reminder of your own mortality. But it doesn't need to be like that.</p>
-    <span> That is where we come in. </span>
-    <p>We're here to make this entire process as easy and painless for you as we can.
-      The Kids Safeguard System exists for that sole purpose, to cater to the needs of you and
-      your family. We're here to help you create the most affordable and 
-      appropriate estate plan designed specifically for your family, and hopefully, somewhere in the process, give you some
-      sliver of relief and comfort knowing that your family will be taken care of.</p>
+    <p> A new approach to helping you care for the ones you leave behind, <br>through
+    the aid of our automated system that makes everything quick and seamless.
+    </p>
+</div>
+</div>
+
+<div class="KSG2container">
+  <div class="KSG-flex-container">
+    <div class="KSG-left">
+      <h2> What we're here for </h2>
+      <p> Planning for what happens after your death can bring up a lot of emotions that a 
+        lot of people just aren't ready to deal with. 
+        Families avoid doing their estate plan because it can be a hassle, it can be emotional, 
+        and it can be a cold reminder of your own mortality. But it doesn't need to be like that.</p>
+      <span> That is where we come in. </span>
+      <p>We're here to make this entire process as easy and painless for you as we can.
+        The Kids Safeguard System exists for that sole purpose, to cater to the needs of you and
+        your family. We're here to help you create the most affordable and 
+        appropriate estate plan designed specifically for your family, and hopefully, somewhere in the process, give you some
+        sliver of relief and comfort knowing that your family will be taken care of.</p>
+    </div>
+    <div class="KSG-right">
+        <img src="/assets/super-family.jpg" alt="super family" width="400px" height="400px">
+    </div>
     </div>
 </div>
 
