--- a/ClientApp/src/app/landing-page/landing-page.component.html
+++ b/ClientApp/src/app/landing-page/landing-page.component.html
@@ -37,26 +37,39 @@
     </div>
     </div>
 </div>
-
 <div class="formButtonContainer">
+<h1> Benefits & Features </h1>
   <div class="cards">
     <div class="newFormCard">    
-    <h1> Start a new form </h1>
-      <button class="button"> Get started</button>
+      <div class="benefitsContainer">
+        <div class="benefitsLeft">
+         
+             <h3> Quick and seamless </h3>
+             <p> Have your documents filled out and ready to go in minutes. </p>
+
+            <h3> Immediate access</h3>
+            <p> Download your forms instantly after purchase.</p>
+          
+              <h3> Save your progress </h3>
+              <p> Need to step away but don't want to start over? No worries, 
+                your progress will be saved. </p>
+        </div>
+        
+        <div class="benefitsRight">
+          <h3> Secure </h3>
+          <p> Your private information is important to us, and will be handled 
+            with care. </p>
+        
+            <h3> Dynamic </h3>
+          <p> Lawyers can upload and setup new forms over time, making this
+            your one-stop-shop for everything forms.
+          </p>
+        
+          <h3> Customer Support </h3>
+          <p> If you experience any trouble at all, we're here for you.</p>
+        </div>
+      </div>
+      <button class="button" [routerLink]="['/user2']"> Get Started </button>
     </div>
-    <div class="continueFormCard">
-      <h1> Continue existing</h1>
-      <button class="button"> Continue</button>
-  </div>
   </div>
 </div>
-
-<div>
-  <h1> Test </h1>
-  <p> ASdaskdhkashd askjdh asjkdhask jdhasjk dhaskjdh askjdh askjhd skjhs</p>
-</div>
-
-<div>
-    <h1> Test </h1>
-    <p> ASdaskdhkashd askjdh asjkdhask jdhasjk dhaskjdh askjdh askjhd skjhs</p>
-  </div>
