nomination pdf completed

--- a/ClientApp/src/app/user2/user2.component.html
+++ b/ClientApp/src/app/user2/user2.component.html
@@ -1,4 +1,5 @@
 <br><br>
+<div class="default-theme">
 <mat-card class="example-card">
     <mat-card-header>
       <mat-card-title>Register</mat-card-title>
@@ -51,3 +52,4 @@
       <button mat-raised-button [routerLink]="['register']"color="secondary">Cancel</button>
     </mat-card-actions>
   </mat-card>
+  </div>
