--- a/ClientApp/src/app/exampledash/exampledash.component.html
+++ b/ClientApp/src/app/exampledash/exampledash.component.html
@@ -22,6 +22,7 @@
     <div class="bottom">
       <div *ngIf="isForms"> Hello you're in forms</div>
       <div *ngIf="isUsers"> Hello you're in users</div>
+      <div *ngIf="isViewPDF">Placeholder for PDF component</div>
     </div>
   </div>
 </div>
