Functional dashboard + simplified Navbar

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -9,11 +9,10 @@
       <span class = "spacing"> </span>
 
       <div class = "custom">
-      <a routerLink = "/about">About </a>
+      <!-- <a routerLink = "/about">About </a> -->
       <a routerLink = "/user2"> Register </a>
       <a routerLink = "/dashboard">Dashboard</a>
-      <!-- Application won't be a tab on final version-->
-      <a routerLink = "/formpage">Forms </a>
+      <!-- <a routerLink = "/formpage">Forms </a> -->
       <a routerLink = "/contact">Contact </a>
       </div>
       
