--- a/ClientApp/src/app/form-page/form-page.component.css
+++ b/ClientApp/src/app/form-page/form-page.component.css
@@ -7,3 +7,9 @@ mat-form-field {
 button {
     background-color:  grey;
 }
+
+.default-theme {
+    padding-top: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
