--- a/ClientApp/src/app/about/about.component.css
+++ b/ClientApp/src/app/about/about.component.css
@@ -1,3 +1,8 @@
 .behind {
-    background-color:lightgrey;
+    background-color:rgb(199, 198, 198);
 }
+
+h4 {
+    margin-top: 0;
+    padding-top: 5%;
+  }
