--- a/ClientApp/src/app/exampledash/exampledash.component.html
+++ b/ClientApp/src/app/exampledash/exampledash.component.html
@@ -1,4 +1,3 @@
-<br>
 
 <div class="container">
   <!-- Sidebar -->
@@ -6,7 +5,7 @@
     <div class="top-left">
       <h2> Menu</h2>
     </div>
-    <div class="bottom">
+    <div class="bottom colBottom">
       <button class="button" (click)="btnForms()"> Forms </button>
       <button class="button" (click)="btnUsers()"> Users </button>
       <button class="button" (click)="btnViewPDF()"> View PDF </button>
@@ -18,11 +17,10 @@
   <!-- Main area -->
   <div id="right" class="column">
     <div class="top-right"></div>
-    <br>
     <div class="bottom">
-      <div *ngIf="isForms"> Hello you're in forms</div>
-      <div *ngIf="isUsers"> Hello you're in users</div>
-      <div *ngIf="isViewPDF">Placeholder for PDF component</div>
+      <div *ngIf="isForms"><app-form-page></app-form-page></div>
+      <div *ngIf="isUsers"> <br><br>Hello you're in users</div>
+      <div *ngIf="isViewPDF"><app-about></app-about></div>
     </div>
   </div>
 </div>
