--- a/ClientApp/src/app/about/about.component.css
+++ b/ClientApp/src/app/about/about.component.css
@@ -1,5 +1,10 @@
 .behind {
-    background-color:rgb(199, 198, 198);
+    background-color:rgb(220, 220, 240);
+/*    background-color:rgb(201, 203, 204);
+
+*/
+    /*background-color:rgb(116, 137, 143);
+*/
 }
 
 h4 {
