--- a/ClientApp/src/app/about/about.component.html
+++ b/ClientApp/src/app/about/about.component.html
@@ -5,15 +5,19 @@
   Only $250
 </p>
 
+<button (click)="getPDF(1)"></button>
+
 <div>
     <label>PDF src</label>
     <input type="text" placeholder="PDF src" [(ngModel)]="pdfSrc">
 </div>
+
 
 <div class = "pdf-container">
 <pdf-viewer [src]="pdfSrc" 
             [render-text]="true"
             style="display: block;"
 ></pdf-viewer>
+
 </div>
 </div>
